# NumericalMethods

./: CMakeLists.txt  LICENSE  README.md
include/: integral.h  ode.h  utils.h
src/ex1/: ex1.cc  plot_ex1.py
src/ex2/: ex2.cc  pendulum.h
src/ex3/: ex3.cc  gsl.cc
